# kblackbox

./: .flatpak-manifest.json  .kde-ci.yml  CHANGES  CMakeLists.txt  Mainpage.dox  Makefile.am  Messages.sh  README  VERSION  big_kblackbox.xpm  kbbballsgraphicwidget.cpp  kbbballsgraphicwidget.h  kbbballsonboard.cpp  kbbballsonboard.h  kbbballsstatusbarwidget.cpp  kbbballsstatusbarwidget.h  kbbboard.cpp  kbbboard.h  kbbgame.cpp  kbbgame.h  kbbgamedoc.cpp  kbbgamedoc.h  kbbgfx.cpp  kbbgfx.h  kbbgraphicsitem.cpp  kbbgraphicsitem.h  kbbgraphicsitemball.cpp  kbbgraphicsitemball.h  kbbgraphicsitemballrepository.cpp  kbbgraphicsitemballrepository.h  kbbgraphicsitemblackbox.cpp  kbbgraphicsitemblackbox.h  kbbgraphicsitemborder.cpp  kbbgraphicsitemborder.h  kbbgraphicsitemcursor.cpp  kbbgraphicsitemcursor.h  kbbgraphicsiteminteractioninfo.cpp  kbbgraphicsiteminteractioninfo.h  kbbgraphicsitemlaser.cpp  kbbgraphicsitemlaser.h  (+44 more)
doc/: CMakeLists.txt  Makefile.am  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index.cvlog  index.docbook  index.html  index.nif  index.sgml
doc/en/: Makefile.am  index-1.html  index-4.html  index.html
icons/: CMakeLists.txt
pics/: CMakeLists.txt  Makefile.am  blue.xpm  brown.xpm  cyan.xpm  done.xpm  giveup.xpm  gray.xpm  green.xpm  green2.xpm  kblackbox.svgz  red.xpm  white.xpm
po/af/: kblackbox.po
po/ar/: kblackbox.po
po/ar/docs/kblackbox/: index.docbook
po/ast/: kblackbox.po
po/be/: kblackbox.po
po/bg/: kblackbox.po
po/bn/: kblackbox.po
po/br/: kblackbox.po
po/bs/: kblackbox.po
po/ca/: kblackbox.po
po/ca/docs/kblackbox/: index.docbook
po/ca@valencia/: kblackbox.po
po/cs/: kblackbox.po
po/cy/: kblackbox.po
po/da/: kblackbox.po
po/de/: kblackbox.po
po/de/docs/kblackbox/: index.docbook
po/el/: kblackbox.po
po/en_GB/: kblackbox.po
po/eo/: kblackbox.po
po/es/: kblackbox.po
po/es/docs/kblackbox/: index.docbook
po/et/: kblackbox.po
po/et/docs/kblackbox/: index.docbook
po/eu/: kblackbox.po
po/fa/: kblackbox.po
po/fi/: kblackbox.po
po/fr/: kblackbox.po
po/fr/docs/kblackbox/: index.docbook
po/ga/: kblackbox.po
po/gl/: kblackbox.po
po/he/: kblackbox.po
po/hi/: kblackbox.po
po/hne/: kblackbox.po
po/hr/: kblackbox.po
po/hu/: kblackbox.po
po/ia/: kblackbox.po
po/id/: kblackbox.po
po/is/: kblackbox.po
po/it/: kblackbox.po
po/it/docs/kblackbox/: index.docbook
po/ja/: kblackbox.po
po/ka/: kblackbox.po
po/kk/: kblackbox.po
po/km/: kblackbox.po
po/ko/: kblackbox.po
po/lt/: kblackbox.po
po/lv/: kblackbox.po
po/mai/: kblackbox.po
po/mk/: kblackbox.po
po/ml/: kblackbox.po
po/mr/: kblackbox.po
po/ms/: kblackbox.po
po/nb/: kblackbox.po
po/nds/: kblackbox.po
po/ne/: kblackbox.po
po/nl/: kblackbox.po
po/nl/docs/kblackbox/: index.docbook
po/nn/: kblackbox.po
po/oc/: kblackbox.po
po/pa/: kblackbox.po
po/pl/: kblackbox.po
po/pt/: kblackbox.po
po/pt/docs/kblackbox/: index.docbook
po/pt_BR/: kblackbox.po
po/pt_BR/docs/kblackbox/: index.docbook
po/ro/: kblackbox.po
po/ru/: kblackbox.po
po/sa/: kblackbox.po
po/se/: kblackbox.po
po/sk/: kblackbox.po
po/sl/: kblackbox.po
po/sl/docs/kblackbox/: index.docbook
po/sq/: kblackbox.po
po/sr/: kblackbox.po
po/sr@ijekavian/: kblackbox.po
po/sr@ijekavianlatin/: kblackbox.po
po/sr@latin/: kblackbox.po
po/sv/: kblackbox.po
po/sv/docs/kblackbox/: index.docbook
po/ta/: kblackbox.po
po/te/: kblackbox.po
po/tg/: kblackbox.po
po/th/: kblackbox.po
po/tr/: kblackbox.po
po/ug/: kblackbox.po
po/uk/: kblackbox.po
po/uk/docs/kblackbox/: index.docbook
po/vi/: kblackbox.po
po/xh/: kblackbox.po
po/zh_CN/: kblackbox.po
po/zh_TW/: kblackbox.po
src/: CMakeLists.txt  Messages.sh  kbbballsgraphicwidget.h  kbbballsonboard.cpp  kbbgamedoc.cpp  kbbgraphicsitem.cpp  kbbgraphicsitem.h  kbbgraphicsitemball.cpp  kbbgraphicsitemball.h  kbbgraphicsitemballrepository.cpp  kbbgraphicsitemballrepository.h  kbbgraphicsitemblackbox.cpp  kbbgraphicsitemborder.h  kbbgraphicsitemcursor.cpp  kbbgraphicsitemcursor.h  kbbgraphicsitemlaser.cpp  kbbgraphicsitemonbox.cpp  kbbgraphicsitemonbox.h  kbbgraphicsitemray.cpp  kbbgraphicsitemrayresult.h  kbbgraphicsitemset.cpp  kbbgraphicsitemtutorialmarker.cpp  kbbgraphicsitemtutorialmarker.h  kbbitemwithposition.cpp  kbbitemwithposition.h  kbblevelconfigurationpreview.cpp  kbblevelconfigurationpreview.h  kbblevelconfigurationwidget.cpp  kbblevelconfigurationwidget.h  kbbmainwindow.cpp  kbbmainwindow.h  kbbscalablegraphicwidget.cpp  kbbscalablegraphicwidget.h  kbbthememanager.cpp  kbbthememanager.h  kbbtutorial.cpp  kbbtutorial.h  kblackbox.qrc  kblackboxui.rc  main.cpp  (+2 more)
themes/: CMakeLists.txt  default.svgz
