
# add here all files
data_DATA = blue.xpm brown.xpm cyan.xpm gray.xpm green.xpm red.xpm white.xpm\
            green2.xpm giveup.xpm done.xpm

# this is the directory, where all datas are installed
# you have given the datas in data_DATA
datadir = $(kde_datadir)/kblackbox/pics

# extra files for "make dist"
EXTRA_DIST = $(data_DATA)

